--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Happy Birthday My Son 🎉</title>
+  <title>Happy Birthday Baby 🎉</title>
   <style>
     :root{--bg:#0f1724;--accent:#ff6b81;--accent2:#ffd166;}
     html,body{height:100%;margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;overflow:hidden;background:#071029;}
@@ -98,3 +98,4 @@
   </script>
 </body>
 </html>
+
